# simple_rag

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
simple_rag/: create_vector_index.py  server.py  settings.py
